// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de citas Actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2022",
      "hora": "10:20",
      "id": 1642292271088,
      "mascota": "Otra mascota",
      "propietario": "Valeria",
      "sintomas": "solo duerme",
      "telefono": "1234567890",
    },
  ],
}
`;

exports[`Probar la clase de citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2022",
      "hora": "10:20",
      "id": 1642292271088,
      "mascota": "Poppy",
      "propietario": "Valeria",
      "sintomas": "solo duerme",
      "telefono": "1234567890",
    },
  ],
}
`;

exports[`Probar la clase de citas Eliminar cita 1`] = `
Citas {
  "citas": Array [],
}
`;
